--- a/app/views/personal_admin/channel_partner/show.html.erb
+++ b/app/views/personal_admin/channel_partner/show.html.erb
@@ -38,10 +38,10 @@
           <td><%= @channel_partner.city %></td>
         </tr>
         <tr>
+          <th>Type</th>
+          <td><%= @channel_partner.channel_partner_type&.name %></td>
           <th>Address:</th>
           <td><%= @channel_partner.full_address %></td>
-          <th></th>
-          <td></td>
         </tr>
         <tr>
           <td colspan="4"><h4>Bank Details</h4></td>
