--- a/app/assets/stylesheets/personal_admin.scss
+++ b/app/assets/stylesheets/personal_admin.scss
@@ -142,6 +142,13 @@ body, html {
   height: 100%;
   width: 20%;
   float: left;
+  background-color: #1f1009;
+
+  li {
+    a {
+        font-size: 16px;
+    }
+  }
 
   .sales-manager-profile {
     .logout {
