--- a/app/views/layouts/personal_admin.html.erb
+++ b/app/views/layouts/personal_admin.html.erb
@@ -27,7 +27,7 @@
     </script>
   </head>
   <body>
-    <div class="sales-manager-menu d-flex flex-column flex-shrink-0 p-3 text-white bg-dark">
+    <div class="sales-manager-menu d-flex flex-column flex-shrink-0 p-3 text-white">
       <a href="/sales-manager" class="heading d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white">
         <%= image_tag "logo.png", alt: "logo", class: "main-logo" %>
         <span class="fs-4">Sales Manager</span>
