--- a/app/views/layouts/personal_admin.html.erb
+++ b/app/views/layouts/personal_admin.html.erb
@@ -30,7 +30,7 @@
     <div class="sales-manager-menu d-flex flex-column flex-shrink-0 p-3 text-white">
       <a href="/sales-manager" class="heading d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white">
         <%= image_tag "logo.png", alt: "logo", class: "main-logo" %>
-        <span class="fs-4">Sales Manager</span>
+        <span class="fs-4"><%= current_user&.role&.name&.titleize %></span>
       </a>
       <hr>
       <ul class="nav nav-pills flex-column mb-auto">
