--- a/app/views/personal_admin/channel_partner/_search.html.erb
+++ b/app/views/personal_admin/channel_partner/_search.html.erb
@@ -2,8 +2,8 @@
 <%= form_tag(sales_manager_channel_partners_path, method: :get) do %>
   <div class="row">
     <div class="col-md-3">
-      <label>Co-ordinators:</label>
-      <%= select_tag('type', options_for_select([['-Select Co-ordinator-', '']] + @types, params[:type]), class: 'form-control disburse-channel-partner', id: 'disburse-channel-partner') %>
+      <label>Channel Partner Type:</label>
+      <%= select_tag('type', options_for_select([['-Select Channel Partner Type-', '']] + @types, params[:type]), class: 'form-control disburse-channel-partner', id: 'disburse-channel-partner') %>
     </div>
   </div>
   <br>
