--- a/app/views/personal_admin/executive/index.html.erb
+++ b/app/views/personal_admin/executive/index.html.erb
@@ -35,9 +35,9 @@
               <td>
                 <%= link_to 'Show', "/sales-manager/executive/#{executive.id}/show" %> |
                 <%= link_to 'Edit', "/sales-manager/executive/#{executive.id}/edit" %>
-                <%if current_user.admin? %>
+                <% if current_user.admin? || current_user.accountant? %>
                  | <%= link_to 'Delete', "/sales-manager/executive/#{executive.id}/destroy", data: { confirm: 'Are you sure?' } %>
-                <%end%>
+                <% end %>
               </td>
             </tr>
           <% end %>
