--- a/app/views/personal_admin/login_entry/index.html.erb
+++ b/app/views/personal_admin/login_entry/index.html.erb
@@ -18,7 +18,9 @@
         </div>
       <%end%>
     </div>
-    <br>
+    <% if current_user.admin? || current_user.accountant? %>
+      <%= render 'search' %>
+    <% end %>
   </div>
 
   <div class="container">
