--- a/app/views/personal_admin/channel_partner/show.html.erb
+++ b/app/views/personal_admin/channel_partner/show.html.erb
@@ -38,6 +38,12 @@
           <td><%= @channel_partner.city %></td>
         </tr>
         <tr>
+          <th>Aadhar Number:</th>
+          <td><%= @channel_partner.aadhar_number %></td>
+          <th>Pan Number:</th>
+          <td><%= @channel_partner.pan_number %></td>
+        </tr>
+        <tr>
           <th>Type</th>
           <td><%= @channel_partner.channel_partner_type&.name %></td>
           <th>Address:</th>
