--- a/app/views/personal_admin/channel_partner/_search.html.erb
+++ b/app/views/personal_admin/channel_partner/_search.html.erb
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-md-3">
       <label>Channel Partner Type:</label>
-      <%= select_tag('type', options_for_select([['-Select Channel Partner Type-', '']] + @types, params[:type]), class: 'form-control disburse-channel-partner', id: 'disburse-channel-partner') %>
+      <%= select_tag('type', options_for_select([['-Select Channel Partner Type-', '']] + @types, session[:channel_partner]), class: 'form-control disburse-channel-partner', id: 'disburse-channel-partner') %>
     </div>
   </div>
   <br>
