--- a/app/views/personal_admin/channel_partner/index.html.erb
+++ b/app/views/personal_admin/channel_partner/index.html.erb
@@ -49,7 +49,7 @@
       </table>
     </div>
     <div class="row digg_pagination">
-      <%= will_paginate @channel_partners %>
+      <%= will_paginate @channel_partners unless @channel_partners.blank? %>
     </div>
   </div>
 </section>
