xls download for disbursement and login entries

--- a/app/views/personal_admin/disbursement/_search.html.erb
+++ b/app/views/personal_admin/disbursement/_search.html.erb
@@ -24,10 +24,13 @@
   </div>
   <br>
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-4">
       <button type="submit" class="btn btn-info">Search</button>
     </div>
-    <div class="col-md-6 text-right">
+    <div class="col-md-4">
+      <button type="submit" class="btn btn-info" name="xls" value="xls">Download as .xlsx</button>
+    </div>
+    <div class="col-md-4 text-right">
       <span>Total Disbursement Amount: Rs. <%= @total_disburse_amount %></span>
     </div>
   </div>
