--- a/app/views/personal_admin/login_entry/_search.html.erb
+++ b/app/views/personal_admin/login_entry/_search.html.erb
@@ -19,6 +19,9 @@
     <div class="col-md-6">
       <button type="submit" class="btn btn-info">Search</button>
     </div>
+    <div class="col-md-6">
+      <button type="submit" class="btn btn-info" name="xls" value="xls">Download as .xlsx</button>
+    </div>
   </div>
 <%end%>
 <br>
