--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -40,7 +40,7 @@
               </div>
             </div>
           </div>
-          <% if current_user&.sales_manager? %>
+          <% if current_user&.sales_manager? || current_user&.accountant? %>
             <div class="row">
               <div class="col-md-12">
                 <b><%= f.label 'Employee Id' %></b>
