--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -188,9 +188,9 @@
 #blog-banner {
   background-image: url(./blog.png);
   height: 400px;
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
-  margin-top: 110px;
+  margin-top: 85px;
   width: 100%;
 }
 
