--- a/app/views/layouts/personal_admin.html.erb
+++ b/app/views/layouts/personal_admin.html.erb
@@ -13,6 +13,8 @@
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag 'personal_admin', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_link_tag params[:controller], media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= tinymce_assets %>
+    <script type="text/javascript" src="/assets/tinymce.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;400&display=swap" rel="stylesheet">
     <%= javascript_include_tag 'personal_admin', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag params[:controller], 'data-turbolinks-track': 'reload' %>
