--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -132,9 +132,9 @@
                       <li class="<%#= active_tab('about_us') %>">
                         <%= link_to "About us", about_us_path, method: :get %>
                       </li>
-                      <!-- <li class="<%#= active_tab('blog') %>">
-                        <%#= link_to "Blog", blog_path, method: :get %>
-                      </li> -->
+                      <li class="<%#= active_tab('blog') %>">
+                        <%= link_to "Blogs", blog_path, method: :get %>
+                      </li>
                       <li class="">
                         <%= link_to "Franchise", channel_partner_path, method: :get %>
                       </li>
@@ -196,9 +196,9 @@
                   <li class="<%= active_tab('emi_calculator') %>">
                     <%= link_to "EMI Calculator", emi_calculator_path, method: :get %>
                   </li>
-                  <!-- <li class="<%#= active_tab('blog') %>">
-                    <%#= link_to "Blog", blog_path, method: :get %>
-                  </li> -->
+                  <li class="<%#= active_tab('blog') %>">
+                    <%= link_to "Blogs", blog_path, method: :get %>
+                  </li>
                   <li class="<%#= active_tab('blog') %>">
                     <%= link_to "Apply Now", "javascript:void(0)", "data-toggle": "modal", "data-target": "#apply-now-modal", id: "sshow-apply-modal" %>
                   </li>
