--- a/app/views/personal_admin/executive/_form.html.erb
+++ b/app/views/personal_admin/executive/_form.html.erb
@@ -2,6 +2,10 @@
   <div class="row">
     <div class="col-md-6">
       <div class="form-group">
+
+<%= text_area_tag :content, "Hello, World!", :class => "tinymce" %>
+<%= tinymce %>
+
         <label>Full Name</label>
         <%= text_field_tag('executive[full_name]', @executive.full_name, class: "form-control") %>
         <p class='error'><%= show_errors(@executive, :full_name) %></p>
