--- a/app/views/layouts/personal_admin.html.erb
+++ b/app/views/layouts/personal_admin.html.erb
@@ -36,6 +36,13 @@
       </a>
       <hr>
       <ul class="nav nav-pills flex-column mb-auto">
+        <% if current_user.admin? %>
+          <li class="nav-item">
+            <a href="/sales-manager/blogs" class="nav-link <%= 'active' if request.path.include?('blog') %>" aria-current="page">
+              <i class="fa fa-exchange" aria-hidden="true"></i>&nbsp;&nbsp;Blogs
+            </a>
+          </li>
+        <%end%>
         <% unless current_user.sales_manager? %>
           <li class="nav-item">
             <a href="/sales-manager/channel-partners" class="nav-link <%= 'active' if request.path.include?('channel-partner') %>" aria-current="page">
