updated the privacy policies

--- a/app/views/home/privacy_policy.html.erb
+++ b/app/views/home/privacy_policy.html.erb
@@ -44,8 +44,15 @@
         <p>We try to act in good faith in providing a comparison service and allowing advertisers to advertise on it. We disclaim all liability and responsibility for the conduct of advertisers using our site to advertise their services. We are not responsible for their services advertised on this site. Users should carry out appropriate checks before engaging them for any services and be confident of their integrity and have proper contact details for the advertiser (not just their mobile number). If in doubt do not engage their services. This site disclaims without exception all liability for all Advertisements.</p>
         <p>Furthermore no advertiser is an associate of this site and we do not act as an agent for any advertiser and where a dispute arises between parties, you undertake to resolve it independently of this site and accept that this site will not mediate in any dispute between parties.</p>
         <p>Customers’ obligations who register with <a href="/">GrowwCapital</a> warrant that you have taken all reasonable precautions to ensure that any data you submit to the Websites is true and accurate. You warrant that all information provided on registration on the Websites and otherwise provided by you on this site shall be true, complete and accurate.</p>
-        <p>Privacy Policy Amendments</p>
+        <p class="pl-about">Privacy Policy Amendments</p>
         <p>Due to changes in legislation or enhancements to functionality and content on the Website, <a href="/">GrowwCapital</a> may amend this policy from time to time without being obliged to inform you every time. If we make any substantial changes in the way we use your personal information we will notify you by posting the changes here on these Privacy Policy pages. You’re requested to visit this page and website to stay updated.</p>
+        <p class="pl-about">Pricing Plan</p>
+        <p>The purpose is to fast process the loan application for clients. We do not charge for our service. Here at Groww capital, we help to process the loan without any processing charges.</p>
+        <p>We do charge a respective amount whoever wants to purchase the franchise.</p>
+        <p class="pl-about">Refund/Cancellation</p>
+        <p>As we do not charge anything from customer we do not have any refund/ cancellation rules.</p>
+        <p>But for franchise, We do return the respective taken amount from the concern person who already paid for the franchise and later incase that they want to discontinue.</p>
+        <hr>
         <p>For any query or complaint regarding confidentiality and sharing of your Customer Data, including sharing with third parties, or suggestion for improvement of this policy, you may contact </p>
         <p class="pl-about">Contact Person</p>
         <p>Mr. Rahul Vairagade</p>
