--- a/app/views/personal_admin/login_entry/show.html.erb
+++ b/app/views/personal_admin/login_entry/show.html.erb
@@ -59,10 +59,10 @@
           <td><%= @login_entry.approved ? 'Yes' : 'No' %></td>
         </tr>
         <tr>
+          <th>Rejected?</th>
+          <td><%= @login_entry.rejected ? 'Yes' : 'No' %></td>
           <th>Notes</th>
           <td><%= @login_entry.notes %></td>
-          <th></th>
-          <td></td>
         </tr>
       </table>
     </div>
